# Introspector-generator

./: .gitignore  .travis.yml  CMakeLists.txt  Introspector-generator.sln  README.md  appveyor.yml
Introspector-generator/: Introspector-generator.vcxproj  Introspector-generator.vcxproj.filters  main.cpp  spellbook.h
example/: example_generated_introspectors.h  generated_introspectors.h  input.cfg
example/example_classes/: c.h
example/example_classes/ab/: a.h  b.h
output/: base_introspector_field_format.txt  beginning_sequence.txt  directories.txt  ending_sequence.txt  input.cfg  introspect_base_sequence.txt  introspect_file_format.txt  introspect_file_format_path.txt  introspector_body_format.txt  introspector_field_format.txt  output_path.txt
src/: main.cpp  spellbook.h
